# compresso

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compresso.cfg  main.c
cli/: cli_utils.c  cli_utils.h  main.c
core/: adaptive_huffman.c  adaptive_huffman.h  compression.c  compression.h  deflate.c  deflate.h  file_utils.c  file_utils.h  huffman.c  huffman.h  log.c  log.h  lzw.c  lzw.h  static_huffman.c  static_huffman.h
guides/: UputstvoZaKorisnike.doc  UputstvoZaProgramere.doc  programmer_en.md  user_en.md
ui/: deflate.c  deflate.h  main.c  ui_utils.c  ui_utils.h
